svn path=/trunk/; revision=448

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -36,6 +36,8 @@
 cmake_minimum_required (VERSION 2.8)
 
 project (ZinekEngine) 
+set (ZinekEngine_VERSION_MAJOR 0)
+set (ZinekEngine_VERSION_MINOR 5)
 
 ## Configuration
 #########################################################################################
@@ -79,56 +81,44 @@ add_subdirectory (Source)
 
 ## PACKING
 #########################################################################################
-INCLUDE(InstallRequiredSystemLibraries)
-SET(CPACK_PACKAGE_NAME "ZinekEngine")
-SET(CPACK_PACKAGE_DESCRIPTION_SUMMARY "Zinek Engine")
-SET(CPACK_PACKAGE_VENDOR "Zinek Code House and Game Studio")
-SET(CPACK_PACKAGE_DESCRIPTION_FILE "${CMAKE_SOURCE_DIR}/Installation/ReadMe.txt")
-SET(CPACK_PACKAGE_VERSION_MAJOR "0")
-SET(CPACK_PACKAGE_VERSION_MINOR "5")
-SET(CPACK_PACKAGE_VERSION_PATCH "0")
-SET(CPACK_PACKAGE_INSTALL_DIRECTORY "Zinek Engine")
-SET(CPACK_PACKAGE_ICON "${CMAKE_SOURCE_DIR}/Installation/Release\\\\InstallIcon.bmp")
-SET(CPACK_NSIS_INSTALLED_ICON_NAME "ZinekEngine.exe")
-SET(CPACK_NSIS_DISPLAY_NAME "${CPACK_PACKAGE_INSTALL_DIRECTORY} Zinek Engine")
-SET(CPACK_NSIS_HELP_LINK "http:\\\\\\\\www.zinekengine.com\\\\en\\\\docs\\\\install")
-SET(CPACK_NSIS_URL_INFO_ABOUT "http:\\\\\\\\www.zinekengine.com")
-SET(CPACK_NSIS_CONTACT "contact@zinekengine.com")
-SET(CPACK_NSIS_MODIFY_PATH ON)
+include(InstallRequiredSystemLibraries)
 
-SET(CPACK_PACKAGE_INSTALL_DIRECTORY "Zinek Engine 0.5")
-SET(CPACK_PACKAGE_INSTALL_REGISTRY_KEY "Zinek Engine 0.5.0")
+set(CPACK_PACKAGE_NAME "Zinek Engine")
+set(CPACK_PACKAGE_VENDOR "Zinek Code House and Game Studio")
+set(CPACK_PACKAGE_VERSION_MAJOR ${ZinekEngine_VERSION_MAJOR})
+set(CPACK_PACKAGE_VERSION_MINOR ${ZinekEngine_VERSION_MINOR})
+set(CPACK_PACKAGE_VERSION_PATCH "0")
+set(CPACK_PACKAGE_DESCRIPTION_SUMMARY "Zinek Engine")
+set(CPACK_PACKAGE_DESCRIPTION_FILE "${CMAKE_SOURCE_DIR}/Installation/Description.txt")
+set(CPACK_PACKAGE_INSTALL_DIRECTORY ${CPACK_PACKAGE_NAME})
+set(CPACK_PACKAGE_ICON "${CMAKE_SOURCE_DIR}\\\\Installation\\\\InstallIcon.bmp")
 
-SET(CPACK_RESOURCE_FILE_LICENSE "${CMAKE_SOURCE_DIR}/Installation/License.txt")
-SET(CPACK_RESOURCE_FILE_WELCOME "${CMAKE_SOURCE_DIR}/Installation/Welcome.txt")
-SET(CPACK_RESOURCE_FILE_README "${CMAKE_SOURCE_DIR}/Installation/Description.txt")
+set(CPACK_NSIS_DISPLAY_NAME ${CPACK_PACKAGE_NAME})
+set(CPACK_NSIS_PACKAGE_NAME ${CPACK_PACKAGE_NAME})
+set(CPACK_NSIS_INSTALLED_ICON_NAME "ZE.exe")
+set(CPACK_NSIS_HELP_LINK "http:\\\\\\\\www.zinekengine.com\\\\en\\\\docs\\\\install")
+set(CPACK_NSIS_URL_INFO_ABOUT "http:\\\\\\\\www.zinekengine.com")
+set(CPACK_NSIS_CONTACT "contact@zin ekengine.com")
+set(CPACK_NSIS_MODIFY_PATH 0)
 
-SET(CPACK_CMAKE_GENERATOR "Unix Makefiles")
-SET(CPACK_GENERATOR "STGZ;TGZ;TZ")
-SET(CPACK_INSTALL_CMAKE_PROJECTS "/home/andy/vtk/CMake-bin;CMake;ALL;/")
-SET(CPACK_NSIS_DISPLAY_NAME "CMake 2.5")
-SET(CPACK_OUTPUT_CONFIG_FILE "/home/andy/vtk/CMake-bin/CPackConfig.cmake")
-SET(CPACK_PACKAGE_DESCRIPTION_FILE "/home/andy/vtk/CMake/Copyright.txt")
-SET(CPACK_PACKAGE_DESCRIPTION_SUMMARY "CMake is a build tool")
-SET(CPACK_PACKAGE_EXECUTABLES "ccmake;CMake")
-SET(CPACK_PACKAGE_FILE_NAME "cmake-2.5.0-Linux-i686")
-SET(CPACK_PACKAGE_INSTALL_DIRECTORY "CMake 2.5")
-SET(CPACK_PACKAGE_INSTALL_REGISTRY_KEY "CMake 2.5.0")
-SET(CPACK_PACKAGE_NAME "CMake")
-SET(CPACK_PACKAGE_VENDOR "Kitware")
-SET(CPACK_PACKAGE_VERSION "2.5.0")
-SET(CPACK_PACKAGE_VERSION_MAJOR "2")
-SET(CPACK_PACKAGE_VERSION_MINOR "5")
-SET(CPACK_PACKAGE_VERSION_PATCH "0")
-SET(CPACK_RESOURCE_FILE_LICENSE "/home/andy/vtk/CMake/Copyright.txt")
-SET(CPACK_RESOURCE_FILE_README "/home/andy/vtk/CMake/Templates/CPack.GenericDescription.txt")
-SET(CPACK_RESOURCE_FILE_WELCOME "/home/andy/vtk/CMake/Templates/CPack.GenericWelcome.txt")
-SET(CPACK_SOURCE_GENERATOR "TGZ;TZ")
-SET(CPACK_SOURCE_OUTPUT_CONFIG_FILE "/home/andy/vtk/CMake-bin/CPackSourceConfig.cmake")
-SET(CPACK_SOURCE_PACKAGE_FILE_NAME "cmake-2.5.0")
-SET(CPACK_SOURCE_STRIP_FILES "")
-SET(CPACK_STRIP_FILES "bin/ccmake;bin/cmake;bin/cpack;bin/ctest")
-SET(CPACK_SYSTEM_NAME "Linux-i686")
-SET(CPACK_TOPLEVEL_TAG "Linux-i686")
-SET(CPACK_PACKAGE_EXECUTABLES "MyExecutable" "My Executable")
-INCLUDE(CPack)
+set(CPACK_RESOURCE_FILE_LICENSE "${CMAKE_SOURCE_DIR}/Installation/License.txt")
+set(CPACK_RESOURCE_FILE_WELCOME "${CMAKE_SOURCE_DIR}/Installation/Welcome.txt")
+set(CPACK_RESOURCE_FILE_README "${CMAKE_SOURCE_DIR}/Installation/Readme.txt")
+
+set(CPACK_COMPONENTS_ALL_GROUPS_IN_ONE_PACKAGE 1)
+
+set(CPACK_COMPONENT_RUNTIME_DISPLAY_NAME "Runtime")
+set(CPACK_COMPONENT_RUNTIME_DESCRIPTION "")
+set(CPACK_COMPONENT_RUNTIME_REQUIRED 1)
+
+set(CPACK_COMPONENT_LIBRARIES_DISPLAY_NAME "Libraries")
+set(CPACK_COMPONENT_LIBRARIES_DESCRIPTION "Static libraries that are required to build Zinek Engine based projects.")
+
+set(CPACK_COMPONENT_INCLUDES_DISPLAY_NAME "Headers")
+set(CPACK_COMPONENT_INCLUDES_DESCRIPTION  "C/C++ header files for use with Zinek Engine")
+
+set(CPACK_COMPONENT_RUNTIME_GROUP "Zinek Engine")
+set(CPACK_COMPONENT_LIBRARIES_GROUP "C++ Development")
+set(CPACK_COMPONENT_INCLUDES_GROUP "C++ Development")
+
+include(CPack)
