svn path=/branches/v0.5.3-TextureCompression/; revision=449

--- a/ZinekEngine.vcproj
+++ b/ZinekEngine.vcproj
@@ -2354,6 +2354,10 @@
 			>
 		</File>
 		<File
+			RelativePath=".\ClassDiagram1.cd"
+			>
+		</File>
+		<File
 			RelativePath=".\Source\ZECompileOptions.h"
 			>
 		</File>
